@@ -61,6 +61,10 @@
 	http://www.cocos2d-iphone.org/wiki/doku.php/prog_guide:tiled_maps
  
  @since v0.8.1
+ 
+ Tiles can have tile flags for additional properties. At the moment only flip horizontal and flip vertical are used. These bit flags are defined in CCTMXXMLParser.h.
+ 
+ @since 1.1
  */
 @interface CCTMXLayer : CCSpriteBatchNode
 {
@@ -127,11 +131,26 @@
  */
 -(uint32_t) tileGIDAt:(CGPoint)tileCoordinate;
 
+/** returns the tile gid at a given tile coordinate and includes the tile flags when flag is YES
+ if it returns 0, it means that the tile is empty.
+ This method requires the the tile map has not been previously released (eg. don't call [layer releaseMap])
+ */
+-(uint32_t) tileGIDAt:(CGPoint)pos withFlags:(BOOL) flags;
+
 /** sets the tile gid (gid = tile global id) at a given tile coordinate.
  The Tile GID can be obtained by using the method "tileGIDAt" or by using the TMX editor -> Tileset Mgr +1.
  If a tile is already placed at that position, then it will be removed.
  */
 -(void) setTileGID:(uint32_t)gid at:(CGPoint)tileCoordinate;
+
+/** sets the tile gid (gid = tile global id) at a given tile coordinate.
+ The Tile GID can be obtained by using the method "tileGIDAt" or by using the TMX editor -> Tileset Mgr +1.
+ If a tile is already placed at that position, then it will be removed.
+ 
+ Use withFlags if the tile flags need to be changed as well
+ */
+
+-(void) setTileGID:(uint32_t)gid at:(CGPoint)pos withFlags:(BOOL) flags;
 
 /** removes a tile at given tile coordinate */
 -(void) removeTileAt:(CGPoint)tileCoordinate;
