@@ -2,6 +2,7 @@ version 1.1-beta2 xx - 2011
 . [NEW] All: Code is compatible with ARC (issue #1199)
 . [NEW] TileMap: supports in-memory TMX map creation (issue #1239)
 . [NEW] Node: Added onExitTransitionDidStart (issue #792)
+. [NEW] TileMap: Flipped tiles can be changed during runtime (issue #1264)
 . [FIX] Node: orderOfArrival is @synthezied correctly (issue #1273)
 . [FIX] Node & Sprite: Scale before Skew to prevent issues with negatives scales.
 . [FIX] TouchDispatcher: correctly handles addition and removal of handlers when being inside a touch handler (issue #1084, #1139)
